# wallpaper_Changer

./: .gitignore  README.md  build.py  pyproject.toml  setup.py
src/: __init__.py
src/anime_wallpaper_changer/: __init__.py  __main__.py
src/anime_wallpaper_changer/core/: config.py  effects.py  parser.py  saver.py  wallpaper.py
src/anime_wallpaper_changer/ui/: components.py  main_window.py  styles.py
src/anime_wallpaper_changer/utils/: constants.py  logger.py
